--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+    <script src="script.js"></script>
     <title>Crayons</title>
 </head>
 <body>
-    <h1>Hello!</h1>
+    <div id="edit_window_container">
+        <canvas id="edit_window"></canvas>
+    </div>
 </body>
 </html>
