--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 </head>
 <body>
     <div id="edit_window_container">
+        <div id="draw_mode_container">
+            <div id="draw_mode">
+                <p>line</p>
+                <p>rect</p>
+            </div>
+        </div>
         <canvas id="edit_window"></canvas>
     </div>
 </body>
