--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
 </head>
 <body>
     <div id="edit_window_container">
-        <div id="draw_mode_container">
-            <div id="draw_mode">
-                <p>line</p>
-                <p>rect</p>
-            </div>
+        <div id="draw_mode">
+            <p id="current_mode" class="draw_mode_button">line</p>
+            <p class="draw_mode_button">rect</p>
         </div>
         <canvas id="edit_window"></canvas>
     </div>
