--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+    <script src="https://unpkg.com/konva@8/konva.min.js"></script>
     <script src="graph.js"></script>
     <script src="script.js"></script>
     <title>Crayons</title>
 </head>
 <body>
-    <div id="edit_window_container">
-        <div id="draw_mode">
-            <p id="current_mode" class="draw_mode_button">line</p>
-            <p class="draw_mode_button">rect</p>
-        </div>
-        <canvas id="edit_window"></canvas>
+    <div id="edit_window"></div>
+    <div id="draw_mode">
+        <p id="current_mode" class="draw_mode_button">line</p>
+        <p class="draw_mode_button">rect</p>
     </div>
 </body>
 </html>
