--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div id="edit_window"></div>
     <div id="draw_mode">
         <p id="current_mode" class="draw_mode_button">line</p>
+        <p class="draw_mode_button">arrow</p>
         <p class="draw_mode_button">rect</p>
     </div>
 </body>
