--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <div id="edit_window"></div>
     <div id="draw_mode">
+        <p class="draw_mode_button">drag</p>
         <p id="current_mode" class="draw_mode_button">line</p>
         <p class="draw_mode_button">arrow</p>
         <p class="draw_mode_button">rect</p>
