Add html&css for Shapes

--- a/index.html
+++ b/index.html
@@ -12,12 +12,20 @@
     <title>Crayons</title>
 </head>
 <body>
-    <div id="edit_window"></div>
-    <div id="draw_mode">
-        <p class="draw_mode_button">drag</p>
-        <p id="current_mode" class="draw_mode_button">line</p>
-        <p class="draw_mode_button">arrow</p>
-        <p class="draw_mode_button">rect</p>
+    <div id="UI-container">
+        <div id="shapes_list_container">
+            <h1>Shapes</h1>
+            <div id="shapes_list"></div>
+        </div>
+        <div id="edit_window_container">
+            <div id="edit_window"></div>
+            <div id="draw_mode">
+                <p class="draw_mode_button">drag</p>
+                <p id="current_mode" class="draw_mode_button">line</p>
+                <p class="draw_mode_button">arrow</p>
+                <p class="draw_mode_button">rect</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
