Add htmlShape for Arrow

--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
         <div id="shapes_list_container">
             <h1>Shapes</h1>
             <div id="shapes_list">
-                <!-- <div class="line">
+                <!-- <div class="Line">
                     <h1>Line</h1>
+                    <p class="begin">Begin: x <input type="text" class="x"> y <input type="text" class="y"></p>
+                    <p class="end">End: x <input type="text" class="x"> y <input type="text" class="y"></p>
+                </div> -->
+                <!-- <div class="Arrow">
+                    <h1>Arrow</h1>
                     <p class="begin">Begin: x <input type="text" class="x"> y <input type="text" class="y"></p>
                     <p class="end">End: x <input type="text" class="x"> y <input type="text" class="y"></p>
                 </div> -->
